--- a/bank_marketing_analysis.ipynb
+++ b/bank_marketing_analysis.ipynb
@@ -7,7 +7,7 @@
       "gpuType": "T4",
       "toc_visible": true,
       "mount_file_id": "1fPAxs1un-NC44wkdqHu-X-03ODrBAqUQ",
-      "authorship_tag": "ABX9TyPTzEV+MXGrjU5tri2tY4EN",
+      "authorship_tag": "ABX9TyOLJ9EtuFiMXdk2A/JQiCZN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 444
         },
         "id": "lmWnHlt_Njcx",
         "outputId": "056650ea-5221-48c8-bdd4-37c8ec509e35"
@@ -863,7 +863,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "kG5jn5LgQUvZ",
         "outputId": "a2876d0a-435f-4d47-cf53-073c43bd5881"
@@ -1271,7 +1271,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 244
         },
         "id": "4e31b35e",
         "outputId": "ba86de8c-0b11-43e5-8632-466d64493a74"
@@ -2554,7 +2554,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "qMJIizYoe1JB",
         "outputId": "da8459ce-738f-456f-cf4a-852e772aacfa"
@@ -3801,7 +3801,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 633
         },
         "id": "BJJTUYFVmB5Y",
         "outputId": "86634aba-40a7-4317-b6ce-40e56bc08370"
@@ -3831,7 +3831,10 @@
         "\n",
         "----\n",
         "Thanks for staying around,\n",
-        "Mayowa Temitope, AKINYELE 🤖 💻 ☕"
+        "\n",
+        "```txt\n",
+        "Mayowa Temitope, AKINYELE 🤖 💻 ☕\n",
+        "```"
       ],
       "metadata": {
         "id": "PjOAlZsumUGM"
