--- a/bank_marketing_analysis.ipynb
+++ b/bank_marketing_analysis.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1fPAxs1un-NC44wkdqHu-X-03ODrBAqUQ",
-      "authorship_tag": "ABX9TyNLZyTz4HWPnahsix/jfi1t",
+      "authorship_tag": "ABX9TyNmY5SRNPBxjI8fZiQb4veu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4124,7 +4124,8 @@
       "cell_type": "markdown",
       "source": [
         "Our model was able to perform just so well on the test data as well. But, we can say this is well anticipated since we've used Optuna already. We can be sure at least that our model is production-ready. With just a few tweaks, we can put the model out on live data.\n",
-        "\n",
+        "### NB\n",
+        "Viewing on Github? Github may not render this notebook correctly. Consider viewing it on Colab or other Cloud Platforms. You may also want to run it locally. Just download it raw. 🐍 💽\n",
         "### What's next?\n",
         "- Using a validation data the model hasn't seen before to cross validate.\n",
         "- Experimenting with other classifiers.\n",
@@ -4139,6 +4140,15 @@
       "metadata": {
         "id": "PjOAlZsumUGM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cMIh3b_OIyfx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
